# sens-apps-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs  sens.rs
src/sens/: i2csens.rs  mmsens.rs  sensor.rs  spisens.rs
