[package]
name = "sens-apps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
async-broadcast = "0.7.2"
async-fs = "2.1.2"
async-io = "2.4.1"
chrono = "0.4.41"
ctrlc = "3.4.7"
i2cdev = "0.6.1"
polling = "3.8.0"
rustix = "1.0.7"
smol = "2.0.2"
smol-macros = "0.1.1"
spidev = "0.7.0"
